--- a/Software/Nucleo_L4R5ZI/Intel8080/Intel8080.ioc
+++ b/Software/Nucleo_L4R5ZI/Intel8080/Intel8080.ioc
@@ -11,27 +11,40 @@ Mcu.IP3=SYS
 Mcu.IPNb=4
 Mcu.Name=STM32L4R5Z(G-I)Tx
 Mcu.Package=LQFP144
-Mcu.Pin0=PF0
-Mcu.Pin1=PF1
-Mcu.Pin10=PG0
-Mcu.Pin11=PG1
-Mcu.Pin12=PG2
-Mcu.Pin13=PG3
-Mcu.Pin14=PG4
-Mcu.Pin15=PD4
-Mcu.Pin16=PD5
-Mcu.Pin17=PD7
-Mcu.Pin18=PG10
-Mcu.Pin19=VP_SYS_VS_Systick
-Mcu.Pin2=PF2
-Mcu.Pin3=PF3
-Mcu.Pin4=PF4
-Mcu.Pin5=PF5
-Mcu.Pin6=PF12
-Mcu.Pin7=PF13
-Mcu.Pin8=PF14
-Mcu.Pin9=PF15
-Mcu.PinsNb=20
+Mcu.Pin0=PE3
+Mcu.Pin1=PE4
+Mcu.Pin10=PF14
+Mcu.Pin11=PF15
+Mcu.Pin12=PG0
+Mcu.Pin13=PG1
+Mcu.Pin14=PE7
+Mcu.Pin15=PE8
+Mcu.Pin16=PE9
+Mcu.Pin17=PE10
+Mcu.Pin18=PD11
+Mcu.Pin19=PD12
+Mcu.Pin2=PF0
+Mcu.Pin20=PD13
+Mcu.Pin21=PD14
+Mcu.Pin22=PD15
+Mcu.Pin23=PG2
+Mcu.Pin24=PG3
+Mcu.Pin25=PG4
+Mcu.Pin26=PG5
+Mcu.Pin27=PD0
+Mcu.Pin28=PD1
+Mcu.Pin29=PD4
+Mcu.Pin3=PF1
+Mcu.Pin30=PD5
+Mcu.Pin31=PD7
+Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin4=PF2
+Mcu.Pin5=PF3
+Mcu.Pin6=PF4
+Mcu.Pin7=PF5
+Mcu.Pin8=PF12
+Mcu.Pin9=PF13
+Mcu.PinsNb=33
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4R5ZITx
@@ -56,10 +69,23 @@ PCC.Seq0=0
 PCC.Series=STM32L4
 PCC.Temperature=25
 PCC.Vdd=3.0
+PD0.Signal=FMC_D2_DA2
+PD1.Signal=FMC_D3_DA3
+PD11.Signal=FMC_A16_CLE
+PD12.Signal=FMC_A17_ALE
+PD13.Signal=FMC_A18
+PD14.Signal=FMC_D0_DA0
+PD15.Signal=FMC_D1_DA1
 PD4.Signal=FMC_NOE
 PD5.Signal=FMC_NWE
 PD7.Mode=NorPsramChipSelect1_1
 PD7.Signal=FMC_NE1
+PE10.Signal=FMC_D7_DA7
+PE3.Signal=FMC_A19
+PE4.Signal=FMC_A20
+PE7.Signal=FMC_D4_DA4
+PE8.Signal=FMC_D5_DA5
+PE9.Signal=FMC_D6_DA6
 PF0.Signal=FMC_A0
 PF1.Signal=FMC_A1
 PF12.Signal=FMC_A6
@@ -72,11 +98,10 @@ PF4.Signal=FMC_A4
 PF5.Signal=FMC_A5
 PG0.Signal=FMC_A10
 PG1.Signal=FMC_A11
-PG10.Mode=NorPsramChipSelect3_4
-PG10.Signal=FMC_NE3
 PG2.Signal=FMC_A12
 PG3.Signal=FMC_A13
 PG4.Signal=FMC_A14
+PG5.Signal=FMC_A15
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -108,48 +133,49 @@ ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
-RCC.ADCFreq_Value=48000000
-RCC.AHBFreq_Value=120000000
+RCC.ADCFreq_Value=96000000
+RCC.AHBFreq_Value=60000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=60000000
-RCC.APB1TimFreq_Value=120000000
-RCC.APB2Freq_Value=120000000
-RCC.APB2TimFreq_Value=120000000
+RCC.APB1Freq_Value=30000000
+RCC.APB1TimFreq_Value=60000000
+RCC.APB2Freq_Value=60000000
+RCC.APB2TimFreq_Value=60000000
 RCC.CRSFreq_Value=48000000
-RCC.CortexFreq_Value=120000000
+RCC.CortexFreq_Value=60000000
 RCC.DFSDM2Freq_Value=16000000
 RCC.DFSDMAudioFreq_Value=4000000
-RCC.DFSDMFreq_Value=60000000
+RCC.DFSDMFreq_Value=30000000
 RCC.DSIFreq_Value=20000000
 RCC.DSITXEscFreq_Value=5000000
 RCC.EthernetFreq_Value=8000000
-RCC.FCLKCortexFreq_Value=120000000
+RCC.FCLKCortexFreq_Value=60000000
 RCC.FMPI2C1Freq_Value=8000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=120000000
+RCC.HCLKFreq_Value=60000000
 RCC.HSE_VALUE=8000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=60000000
-RCC.I2C2Freq_Value=60000000
-RCC.I2C3Freq_Value=60000000
-RCC.I2C4Freq_Value=60000000
+RCC.I2C1Freq_Value=30000000
+RCC.I2C2Freq_Value=30000000
+RCC.I2C3Freq_Value=30000000
+RCC.I2C4Freq_Value=30000000
 RCC.I2S1Freq_Value=96000000
 RCC.I2S2Freq_Value=96000000
 RCC.I2SClocksFreq_Value=48000000
-RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,DFSDM2Freq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2S1Freq_Value,I2S2Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTimerFreq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLLCLKFreq_Value,PLLDSIFreq_Value,PLLDSIVCOFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SQoutputFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLRCLKFreq_Value,PLLRoutputFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2QoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1AFreq_Value,SAI1BFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDIOFreq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
-RCC.LCDTFTFreq_Value=16000000
-RCC.LPTIM1Freq_Value=60000000
-RCC.LPTIM2Freq_Value=60000000
+RCC.IPParameters=48MHZClocksFreq_Value,ADC12outputFreq_Value,ADC34outputFreq_Value,ADCFreq_Value,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CRSFreq_Value,CortexFreq_Value,DFSDM2Freq_Value,DFSDMAudioFreq_Value,DFSDMFreq_Value,DSIFreq_Value,DSITXEscFreq_Value,EthernetFreq_Value,FCLKCortexFreq_Value,FMPI2C1Freq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I2S1Freq_Value,I2S2Freq_Value,I2SClocksFreq_Value,LCDTFTFreq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTimerFreq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSE_VALUE,LSI_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,MCOFreq_Value,MSI_VALUE,OCTOSPIMFreq_Value,PLLCLKFreq_Value,PLLDSIFreq_Value,PLLDSIVCOFreq_Value,PLLI2SPCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SQoutputFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SoutputFreq_Value,PLLM1,PLLMCOFreq_Value,PLLMUL,PLLN,PLLPoutputFreq_Value,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLR,PLLRCLKFreq_Value,PLLRoutputFreq_Value,PLLSAI1N,PLLSAI1PoutputFreq_Value,PLLSAI1QoutputFreq_Value,PLLSAI1RoutputFreq_Value,PLLSAI2PoutputFreq_Value,PLLSAI2QoutputFreq_Value,PLLSAI2RoutputFreq_Value,PLLSourceVirtual,PRESCALERUSB,PWRFreq_Value,RNGFreq_Value,RTCFreq_Value,RTCHSEDivFreq_Value,SAI1AFreq_Value,SAI1BFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDIOFreq_Value,SDMMCFreq_Value,SWPMI1Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,SYSCLKSourceVirtual,TIM15Freq_Value,TIM16Freq_Value,TIM17Freq_Value,TIM1Freq_Value,TIM20Freq_Value,TIM2Freq_Value,TIM3Freq_Value,TIM8Freq_Value,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USBFreq_Value,VCOI2SInputFreq_Value,VCOI2SOutputFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOInputMFreq_Value,VCOOutput2Freq_Value,VCOOutputFreq_Value,VCOSAI1OutputFreq_Value,VCOSAI2OutputFreq_Value,VcooutputI2S,WatchDogFreq_Value
+RCC.LCDTFTFreq_Value=32000000
+RCC.LPTIM1Freq_Value=30000000
+RCC.LPTIM2Freq_Value=30000000
 RCC.LPTimerFreq_Value=8000000
-RCC.LPUART1Freq_Value=60000000
+RCC.LPUART1Freq_Value=30000000
 RCC.LSCOPinFreq_Value=32000
+RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO1PinFreq_Value=120000000
+RCC.MCO1PinFreq_Value=60000000
 RCC.MCO2PinFreq_Value=16000000
 RCC.MCOFreq_Value=72000000
 RCC.MSI_VALUE=4000000
-RCC.OCTOSPIMFreq_Value=120000000
+RCC.OCTOSPIMFreq_Value=60000000
 RCC.PLLCLKFreq_Value=96000000
 RCC.PLLDSIFreq_Value=160000000
 RCC.PLLDSIVCOFreq_Value=320000000
@@ -158,35 +184,37 @@ RCC.PLLI2SQCLKFreq_Value=96000000
 RCC.PLLI2SQoutputFreq_Value=96000000
 RCC.PLLI2SRCLKFreq_Value=96000000
 RCC.PLLI2SoutputFreq_Value=48000000
+RCC.PLLM1=2
 RCC.PLLMCOFreq_Value=72000000
 RCC.PLLMUL=RCC_PLL_MUL9
 RCC.PLLN=30
 RCC.PLLPoutputFreq_Value=120000000
 RCC.PLLQCLKFreq_Value=96000000
 RCC.PLLQoutputFreq_Value=120000000
-RCC.PLLRCLKFreq_Value=120000000
+RCC.PLLR=RCC_PLLR_DIV4
+RCC.PLLRCLKFreq_Value=60000000
 RCC.PLLRoutputFreq_Value=96000000
 RCC.PLLSAI1N=12
-RCC.PLLSAI1PoutputFreq_Value=48000000
-RCC.PLLSAI1QoutputFreq_Value=48000000
-RCC.PLLSAI1RoutputFreq_Value=48000000
-RCC.PLLSAI2PoutputFreq_Value=32000000
-RCC.PLLSAI2QoutputFreq_Value=32000000
-RCC.PLLSAI2RoutputFreq_Value=32000000
-RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
+RCC.PLLSAI1PoutputFreq_Value=96000000
+RCC.PLLSAI1QoutputFreq_Value=96000000
+RCC.PLLSAI1RoutputFreq_Value=96000000
+RCC.PLLSAI2PoutputFreq_Value=64000000
+RCC.PLLSAI2QoutputFreq_Value=64000000
+RCC.PLLSAI2RoutputFreq_Value=64000000
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSI
 RCC.PRESCALERUSB=RCC_USBCLKSOURCE_PLL_DIV1_5
-RCC.PWRFreq_Value=120000000
-RCC.RNGFreq_Value=48000000
+RCC.PWRFreq_Value=60000000
+RCC.RNGFreq_Value=96000000
 RCC.RTCFreq_Value=32000
 RCC.RTCHSEDivFreq_Value=4000000
 RCC.SAI1AFreq_Value=16000000
 RCC.SAI1BFreq_Value=16000000
-RCC.SAI1Freq_Value=48000000
-RCC.SAI2Freq_Value=48000000
+RCC.SAI1Freq_Value=96000000
+RCC.SAI2Freq_Value=96000000
 RCC.SDIOFreq_Value=96000000
 RCC.SDMMCFreq_Value=120000000
 RCC.SWPMI1Freq_Value=23666666.666666668
-RCC.SYSCLKFreq_VALUE=120000000
+RCC.SYSCLKFreq_VALUE=60000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.SYSCLKSourceVirtual=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TIM15Freq_Value=72000000
@@ -197,62 +225,88 @@ RCC.TIM20Freq_Value=72000000
 RCC.TIM2Freq_Value=72000000
 RCC.TIM3Freq_Value=72000000
 RCC.TIM8Freq_Value=72000000
-RCC.UART4Freq_Value=60000000
-RCC.UART5Freq_Value=60000000
-RCC.USART1Freq_Value=120000000
-RCC.USART2Freq_Value=60000000
-RCC.USART3Freq_Value=60000000
-RCC.USBFreq_Value=48000000
+RCC.UART4Freq_Value=30000000
+RCC.UART5Freq_Value=30000000
+RCC.USART1Freq_Value=60000000
+RCC.USART2Freq_Value=30000000
+RCC.USART3Freq_Value=30000000
+RCC.USBFreq_Value=96000000
 RCC.VCOI2SInputFreq_Value=1000000
 RCC.VCOI2SOutputFreq_Value=192000000
-RCC.VCOInput2Freq_Value=8000000
-RCC.VCOInput3Freq_Value=8000000
+RCC.VCOInput2Freq_Value=16000000
+RCC.VCOInput3Freq_Value=16000000
 RCC.VCOInputFreq_Value=8000000
 RCC.VCOInputMFreq_Value=500000
 RCC.VCOOutput2Freq_Value=8000000
 RCC.VCOOutputFreq_Value=240000000
-RCC.VCOSAI1OutputFreq_Value=96000000
-RCC.VCOSAI2OutputFreq_Value=64000000
+RCC.VCOSAI1OutputFreq_Value=192000000
+RCC.VCOSAI2OutputFreq_Value=128000000
 RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
-SH.FMC_A0.0=FMC_A0,15b-a1
+SH.FMC_A0.0=FMC_A0,21b-a1
 SH.FMC_A0.ConfNb=1
-SH.FMC_A1.0=FMC_A1,15b-a1
+SH.FMC_A1.0=FMC_A1,21b-a1
 SH.FMC_A1.ConfNb=1
-SH.FMC_A10.0=FMC_A10,15b-a1
+SH.FMC_A10.0=FMC_A10,21b-a1
 SH.FMC_A10.ConfNb=1
-SH.FMC_A11.0=FMC_A11,15b-a1
+SH.FMC_A11.0=FMC_A11,21b-a1
 SH.FMC_A11.ConfNb=1
-SH.FMC_A12.0=FMC_A12,15b-a1
+SH.FMC_A12.0=FMC_A12,21b-a1
 SH.FMC_A12.ConfNb=1
-SH.FMC_A13.0=FMC_A13,15b-a1
+SH.FMC_A13.0=FMC_A13,21b-a1
 SH.FMC_A13.ConfNb=1
-SH.FMC_A14.0=FMC_A14,15b-a1
+SH.FMC_A14.0=FMC_A14,21b-a1
 SH.FMC_A14.ConfNb=1
-SH.FMC_A2.0=FMC_A2,15b-a1
+SH.FMC_A15.0=FMC_A15,21b-a1
+SH.FMC_A15.ConfNb=1
+SH.FMC_A16_CLE.0=FMC_A16,21b-a1
+SH.FMC_A16_CLE.ConfNb=1
+SH.FMC_A17_ALE.0=FMC_A17,21b-a1
+SH.FMC_A17_ALE.ConfNb=1
+SH.FMC_A18.0=FMC_A18,21b-a1
+SH.FMC_A18.ConfNb=1
+SH.FMC_A19.0=FMC_A19,21b-a1
+SH.FMC_A19.ConfNb=1
+SH.FMC_A2.0=FMC_A2,21b-a1
 SH.FMC_A2.ConfNb=1
-SH.FMC_A3.0=FMC_A3,15b-a1
+SH.FMC_A20.0=FMC_A20,21b-a1
+SH.FMC_A20.ConfNb=1
+SH.FMC_A3.0=FMC_A3,21b-a1
 SH.FMC_A3.ConfNb=1
-SH.FMC_A4.0=FMC_A4,15b-a1
+SH.FMC_A4.0=FMC_A4,21b-a1
 SH.FMC_A4.ConfNb=1
-SH.FMC_A5.0=FMC_A5,15b-a1
+SH.FMC_A5.0=FMC_A5,21b-a1
 SH.FMC_A5.ConfNb=1
-SH.FMC_A6.0=FMC_A6,15b-a1
+SH.FMC_A6.0=FMC_A6,21b-a1
 SH.FMC_A6.ConfNb=1
-SH.FMC_A7.0=FMC_A7,15b-a1
+SH.FMC_A7.0=FMC_A7,21b-a1
 SH.FMC_A7.ConfNb=1
-SH.FMC_A8.0=FMC_A8,15b-a1
+SH.FMC_A8.0=FMC_A8,21b-a1
 SH.FMC_A8.ConfNb=1
-SH.FMC_A9.0=FMC_A9,15b-a1
+SH.FMC_A9.0=FMC_A9,21b-a1
 SH.FMC_A9.ConfNb=1
-SH.FMC_NOE.0=FMC_NOE,Lcd4
-SH.FMC_NOE.1=FMC_NOE,Sram1
-SH.FMC_NOE.ConfNb=2
-SH.FMC_NWE.0=FMC_NWE,Lcd4
-SH.FMC_NWE.1=FMC_NWE,Sram1
-SH.FMC_NWE.ConfNb=2
+SH.FMC_D0_DA0.0=FMC_D0,8b-d1
+SH.FMC_D0_DA0.ConfNb=1
+SH.FMC_D1_DA1.0=FMC_D1,8b-d1
+SH.FMC_D1_DA1.ConfNb=1
+SH.FMC_D2_DA2.0=FMC_D2,8b-d1
+SH.FMC_D2_DA2.ConfNb=1
+SH.FMC_D3_DA3.0=FMC_D3,8b-d1
+SH.FMC_D3_DA3.ConfNb=1
+SH.FMC_D4_DA4.0=FMC_D4,8b-d1
+SH.FMC_D4_DA4.ConfNb=1
+SH.FMC_D5_DA5.0=FMC_D5,8b-d1
+SH.FMC_D5_DA5.ConfNb=1
+SH.FMC_D6_DA6.0=FMC_D6,8b-d1
+SH.FMC_D6_DA6.ConfNb=1
+SH.FMC_D7_DA7.0=FMC_D7,8b-d1
+SH.FMC_D7_DA7.ConfNb=1
+SH.FMC_NOE.0=FMC_NOE,Sram1
+SH.FMC_NOE.ConfNb=1
+SH.FMC_NWE.0=FMC_NWE,Sram1
+SH.FMC_NWE.ConfNb=1
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 board=NUCLEO-L4R5ZI
 boardIOC=true
-isbadioc=true
+isbadioc=false
