--- a/Software/LPWUR/ULPWUR.ioc
+++ b/Software/LPWUR/ULPWUR.ioc
@@ -6,7 +6,7 @@ Dma.RequestsNb=3
 Dma.SPI1_TX.2.Direction=DMA_MEMORY_TO_PERIPH
 Dma.SPI1_TX.2.EventEnable=DISABLE
 Dma.SPI1_TX.2.Instance=DMA1_Channel3
-Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.SPI1_TX.2.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.SPI1_TX.2.MemInc=DMA_MINC_ENABLE
 Dma.SPI1_TX.2.Mode=DMA_NORMAL
 Dma.SPI1_TX.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
@@ -64,9 +64,8 @@ Mcu.IP3=RCC
 Mcu.IP4=SPI1
 Mcu.IP5=SYS
 Mcu.IP6=UART4
-Mcu.IP7=USART3
-Mcu.IP8=USB_OTG_FS
-Mcu.IPNb=9
+Mcu.IP7=USB_OTG_FS
+Mcu.IPNb=8
 Mcu.Name=STM32L4R5Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
@@ -218,12 +217,10 @@ PCC.Vdd=3.0
 PD8.GPIOParameters=GPIO_Label
 PD8.GPIO_Label=STLK_RX [STM32F103CBT6_PA3]
 PD8.Locked=true
-PD8.Mode=Asynchronous
 PD8.Signal=USART3_TX
 PD9.GPIOParameters=GPIO_Label
 PD9.GPIO_Label=STLK_TX [STM32F103CBT6_PA2]
 PD9.Locked=true
-PD9.Mode=Asynchronous
 PD9.Signal=USART3_RX
 PG5.GPIOParameters=GPIO_Label
 PG5.GPIO_Label=USB_PowerSwitchOn [STMPS2151STR_EN]
@@ -275,7 +272,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_USART3_UART_Init-USART3-false-HAL-true,5-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,6-MX_SPI1_Init-SPI1-false-HAL-true,7-MX_DMA_Init-DMA-false-HAL-true,8-MX_UART4_Init-UART4-false-HAL-true,9-MX_DMA2D_Init-DMA2D-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,4-MX_USB_OTG_FS_PCD_Init-USB_OTG_FS-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_DMA_Init-DMA-false-HAL-true,7-MX_UART4_Init-UART4-false-HAL-true
 RCC.48MHZClocksFreq_Value=24000000
 RCC.ADC12outputFreq_Value=72000000
 RCC.ADC34outputFreq_Value=72000000
@@ -396,8 +393,6 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-USART3.IPParameters=VirtualMode-Asynchronous
-USART3.VirtualMode-Asynchronous=VM_ASYNC
 USB_OTG_FS.IPParameters=VirtualMode
 USB_OTG_FS.VirtualMode=Device_Only
 VP_SYS_VS_Systick.Mode=SysTick
