--- a/Software/LPWUR/ULPWUR.ioc
+++ b/Software/LPWUR/ULPWUR.ioc
@@ -122,8 +122,10 @@ NVIC.SPI1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:true\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false
-PA0.GPIOParameters=GPIO_Speed,GPIO_Label
+PA0.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA0.GPIO_Label=EPD_CS
+PA0.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA0.GPIO_PuPd=GPIO_PULLUP
 PA0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA0.Locked=true
 PA0.Signal=GPIO_Output
@@ -153,8 +155,9 @@ PA14\ (JTCK/SWCLK).GPIO_Label=TCK
 PA14\ (JTCK/SWCLK).Locked=true
 PA14\ (JTCK/SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
-PA4.GPIOParameters=GPIO_Speed,GPIO_Label
+PA4.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA4.GPIO_Label=EPD_RST
+PA4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
 PA4.Signal=GPIO_Output
@@ -194,8 +197,9 @@ PC0.GPIO_Label=EPD_ON
 PC0.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC0.Locked=true
 PC0.Signal=GPIO_Output
-PC1.GPIOParameters=PinState,GPIO_Label
+PC1.GPIOParameters=GPIO_Speed,PinState,GPIO_Label
 PC1.GPIO_Label=EPD_OFF
+PC1.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC1.Locked=true
 PC1.PinState=GPIO_PIN_SET
 PC1.Signal=GPIO_Output
@@ -219,8 +223,9 @@ PC14-OSC32_IN\ (PC14).Signal=RCC_OSC32_IN
 PC15-OSC32_OUT\ (PC15).Locked=true
 PC15-OSC32_OUT\ (PC15).Mode=LSE-External-Oscillator
 PC15-OSC32_OUT\ (PC15).Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
+PC2.GPIOParameters=GPIO_Speed,GPIO_Label
 PC2.GPIO_Label=Kill
+PC2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC2.Locked=true
 PC2.Signal=GPIO_Output
 PCC.Checker=true
@@ -403,8 +408,8 @@ RCC.VcooutputI2S=48000000
 RCC.WatchDogFreq_Value=32000
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_32
-SPI1.CalculateBaudRate=3.5 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
+SPI1.CalculateBaudRate=14.0 MBits/s
 SPI1.DataSize=SPI_DATASIZE_16BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,DataSize
