--- a/Software/LPWUR/ULPWUR.ioc
+++ b/Software/LPWUR/ULPWUR.ioc
@@ -70,38 +70,39 @@ Mcu.Name=STM32L4R5Z(G-I)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN (PC14)
-Mcu.Pin10=PA4
-Mcu.Pin11=PA5
-Mcu.Pin12=PA6
-Mcu.Pin13=PA7
-Mcu.Pin14=PB14
-Mcu.Pin15=PD8
-Mcu.Pin16=PD9
-Mcu.Pin17=PG5
-Mcu.Pin18=PG6
-Mcu.Pin19=PG7
+Mcu.Pin10=PA1
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PB14
+Mcu.Pin16=PD8
+Mcu.Pin17=PD9
+Mcu.Pin18=PG5
+Mcu.Pin19=PG6
 Mcu.Pin2=PC15-OSC32_OUT (PC15)
-Mcu.Pin20=PG8
-Mcu.Pin21=PA8
-Mcu.Pin22=PA9
-Mcu.Pin23=PA10
-Mcu.Pin24=PA11
-Mcu.Pin25=PA12
-Mcu.Pin26=PA13 (JTMS/SWDIO)
-Mcu.Pin27=PA14 (JTCK/SWCLK)
-Mcu.Pin28=PC10
-Mcu.Pin29=PC11
+Mcu.Pin20=PG7
+Mcu.Pin21=PG8
+Mcu.Pin22=PA8
+Mcu.Pin23=PA9
+Mcu.Pin24=PA10
+Mcu.Pin25=PA11
+Mcu.Pin26=PA12
+Mcu.Pin27=PA13 (JTMS/SWDIO)
+Mcu.Pin28=PA14 (JTCK/SWCLK)
+Mcu.Pin29=PC10
 Mcu.Pin3=PH0-OSC_IN (PH0)
-Mcu.Pin30=PB3 (JTDO/TRACESWO)
-Mcu.Pin31=PB7
-Mcu.Pin32=VP_SYS_VS_Systick
+Mcu.Pin30=PC11
+Mcu.Pin31=PB3 (JTDO/TRACESWO)
+Mcu.Pin32=PB7
+Mcu.Pin33=VP_SYS_VS_Systick
 Mcu.Pin4=PH1-OSC_OUT (PH1)
 Mcu.Pin5=PC0
 Mcu.Pin6=PC1
 Mcu.Pin7=PC2
-Mcu.Pin8=PA0
-Mcu.Pin9=PA1
-Mcu.PinsNb=33
+Mcu.Pin8=PC3
+Mcu.Pin9=PA0
+Mcu.PinsNb=34
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32L4R5ZITx
@@ -157,7 +158,7 @@ PA14\ (JTCK/SWCLK).Mode=Trace_Asynchronous_SW
 PA14\ (JTCK/SWCLK).Signal=SYS_JTCK-SWCLK
 PA4.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_ModeDefaultOutputPP
 PA4.GPIO_Label=EPD_RST
-PA4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PA4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
 PA4.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PA4.Locked=true
 PA4.Signal=GPIO_Output
@@ -228,6 +229,11 @@ PC2.GPIO_Label=Kill
 PC2.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
 PC2.Locked=true
 PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_Speed,GPIO_Label
+PC3.GPIO_Label=PwrKill
+PC3.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PC3.Locked=true
+PC3.Signal=GPIO_Output
 PCC.Checker=true
 PCC.Line=STM32L4R5/S5
 PCC.MCU=STM32L4R5Z(G-I)Tx
